# PyLCSS

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  run_gui.bat
.github/workflows/: python-publish.yml
data/: Boeing_747.cad  Box.cad  Cantilever (3D Voxel).cad  Cantilever_DP780_WhipFracture.cad  Car Crash 2D.json  Crashbox_AluminumImpact.cad  Crashbox_OpenRadioss_QuickDemo.cad  Crashbox_QuickDemo.cad  FEA Plate Solution Space.json  Gear Unit.json  Geometric Programming Problem.json  Helical_Gearbox.cad  MBB Beam (3D Voxel).cad  MBB Beam.cad  Neon_FrontalCrash_ImportSTEP.cad  Neon_FrontalCrash_Parametric.cad  Neon_FrontalCrash_RadiossDeck.cad  OpenRadioss_Demo_Cube.cad  Robust Cantilever.cad  Two-Stage Gearbox (Modular).json  cantilever_topopt_stl_crash.cad  cantilever_topopt_stl_fea.cad  fea_helical_gearbox.cad  fea_plate.cad  topopt_plate.cad
data/Two-Stage Gearbox (Modular)/: optimization_setup.json  sensitivity.json  surrogate_settings.json  systems.json
data/benchmarks/: openradioss_demo_cube.k
pylcss/: config.py  main.py
pylcss/assistant_systems/: __init__.py
pylcss/assistant_systems/api/: dispatcher.py
pylcss/assistant_systems/config/: llm_memory.json  settings.json  settings.py
pylcss/assistant_systems/core/: agent.py  interpreter.py  manager.py  orchestrator.py  workflows.py
pylcss/assistant_systems/services/: input.py  llm.py  memory.py  pydantic_agent.py  tts.py  voice.py
pylcss/assistant_systems/tools/: __init__.py  base_tool.py  execution_tools.py  graph_tools.py  pydantic_adapter.py  registry.py
pylcss/assistant_systems/utils/: schema.py
pylcss/cad/: __init__.py  advanced_nodes.py  assembly.py  engine.py  enhanced_nodes.py  export.py  node_library.py  nodes.py  parametric_nodes.py  parts.py  professional_gui.py  runtime.py  viewer.py
pylcss/cad/core/: base_node.py  registry.py
pylcss/cad/freecad_bridge/: __init__.py  brep_reader.py  launcher.py  mod_installer.py  param_writer.py  watcher.py
pylcss/cad/gui/: __init__.py
pylcss/cad/nodes/: __init__.py  advanced.py  analysis.py  assembly.py  code_part.py  crash.py  cutting.py  features.py  fem.py  freecad_part.py  geometry.py  io.py  modeling.py  operations.py  parametric.py  patterns.py  simulation.py  sketch.py  sketcher.py  surfacing.py  values.py
pylcss/cad/nodes_impl/: io.py  operations.py  patterns.py  primitives.py  simulation.py  sketch.py  values.py
pylcss/design_studio/: __init__.py  engine.py  node_library.py  runtime.py
pylcss/design_studio/core/: base_node.py
pylcss/design_studio/crash/: __init__.py  conditions.py  materials.py  radioss_deck.py  solver.py
pylcss/design_studio/fem/: __init__.py  _helpers.py  boundary_conditions.py  materials.py  mesh.py  remesh.py  solver.py
pylcss/design_studio/freecad_bridge/: __init__.py  brep_reader.py  fem_translator.py  launcher.py  mod_installer.py  (+2 more)
pylcss/hands_free/: __init__.py  agent_core.py  agent_orchestrator.py  agent_tools.py  command_dispatcher.py  config.py  download_model.py  hands_free_manager.py  llm_client.py  llm_interpreter.py  llm_memory.py  llm_providers.py  mouse_controller.py  node_schema_generator.py  settings.json  voice_controller.py  workflow_recorder.py
pylcss/io_manager/: __init__.py  cad_io.py  data_io.py  mesh_io.py  project_io.py
pylcss/optimization/: core.py  evaluator.py  sensitivity.py  workers.py
pylcss/optimization_module/: common.py  optimization_interface.py  sensitivity_analysis.py  sensitivity_interface.py  solver_wizard.py  solvers.py
pylcss/problem_definition/: problem_setup.py
pylcss/sensitivity/: __init__.py  analysis.py
pylcss/solution_space/: __init__.py  bayesian.py  computation_engine.py  compute_solution_space.py  interpolation_worker_thread.py  monte_carlo.py  monte_carlo_sampling.py  phase1.py  phase2.py  resample_worker_thread.py  solution_space_interface.py  solver_engine.py  solver_worker_thread.py  step_a.py  step_analysis.py  step_b.py
pylcss/solver_backends/: __init__.py  calculix.py  common.py  frd_reader.py  openradioss.py  radioss_reader.py
pylcss/surrogate_modeling/: __init__.py  geometric_models.py  geometric_wrapper.py  geometry.py  models.py  surrogate_interface.py  training_engine.py  validation.py
pylcss/system_modeling/: __init__.py  editor.py  graph_input_output.py  graph_validation.py  model_builder.py  model_compilation.py  model_merge.py  node_registry.py  node_types.py  system_list_manager.py  system_model.py
pylcss/user_interface/: help_widget.py  main_application_window.py  optimization_settings_dialog.py  optimization_widget.py  qt_patches.py  sensitivity_widget.py  text_utils.py  theme_manager.py
scripts/: generate_747_cad.py  install_solvers.py  main.py
(+83 files in other folders)
