[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcss"
version = "1.3.0"
description = "Low-Code System Solutions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "PolyForm Shield License 1.0.0"}
authors = [
    {name = "Kutay Demir"}
]
dependencies = [
    "PySide6==6.10.1",
    "NodeGraphQt==0.6.43",
    "numpy==2.0.0",
    "scipy==1.16.3",
    "pandas==2.3.3",
    "pyqtgraph==0.14.0",
    "networkx==3.6.1",
    "h5py==3.15.1",
    "QtAwesome==1.4.0",
    "nevergrad==1.0.12",
    "SALib==1.5.2",
    "pint==0.25.2",
    "dill==0.4.0",
    "torch==2.9.1",
    "scikit-learn==1.8.0",
    "joblib==1.5.3"
]

[project.scripts]
pylcss = "pylcss.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pylcss*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
