[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcss"
version = "1.3.0"
description = "Low-Code System Solutions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "PolyForm Shield License 1.0.0"}
authors = [
    {name = "Kutay Demir"}
]
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pyaudio==0.2.14",
    "pyautogui==0.9.54",
    "mediapipe>=0.10.18",
    "PySide6==6.10.1",
    "NodeGraphQt==0.6.43",
    "scipy==1.13.1",
    "pandas==2.2.2",
    "pyqtgraph==0.14.0",
    "networkx==3.3",
    "h5py==3.11.0",
    "QtAwesome==1.3.1",
    "nevergrad==1.0.4",
    "SALib==1.5.2",
    "pint==0.25.2",
    "dill==0.4.0",
    "torch==2.9.1",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "vtk==9.3.1",
    "cadquery==2.6.1",
    "netgen-mesher==6.2.2506",
    "scikit-fem==11.0.0",
    "meshio==5.3.5",
    "scikit-image==0.26.0",
    "openai>=1.12.0",
    "faster-whisper==1.2.1",
    "edge-tts==6.1.10",
    "pydantic>=2.0.0"
]

[project.scripts]
pylcss = "pylcss.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pylcss*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
