[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcss"
version = "2.0.0"
description = "Professional Engineering Design Optimization Platform — Parametric CAD, FEA, Topology Optimisation, Sensitivity Analysis, Solution Spaces, Surrogate AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "PolyForm Shield License 1.0.0"}
authors = [
    {name = "Kutay Demir"}
]
keywords = [
    "engineering", "optimization", "CAD", "FEA", "topology-optimization",
    "sensitivity-analysis", "surrogate-modeling", "solution-space",
    "parametric-design", "NSGA-II"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    # Core scientific
    "numpy==2.2.6",
    "scipy==1.13.1",
    "pandas==2.2.2",

    # GUI
    "PySide6==6.10.1",
    "NodeGraphQt==0.6.43",
    "pyqtgraph==0.14.0",
    "QtAwesome==1.3.1",

    # CAD / FEA / Visualisation
    "cadquery==2.6.1",
    "vtk==9.3.1",
    "scikit-fem==11.0.0",
    "netgen-mesher==6.2.2506",
    "meshio==5.3.5",
    "scikit-image==0.26.0",
    "numpy-stl>=3.0.0",

    # Optimisation & Sensitivity
    "nevergrad==1.0.4",
    "SALib==1.5.2",

    # ML / Surrogates
    "torch==2.9.1",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",

    # Units & Serialisation
    "pint==0.25.2",
    "h5py==3.11.0",
    "dill==0.4.0",
    "networkx==3.3",

    # I/O formats
    "openpyxl>=3.1.0",

    # Voice assistant
    "faster-whisper==1.2.1",
    "edge-tts==6.1.10",
    "pydantic>=2.0.0",

    # Utilities
    "packaging>=21.0",
    "pyaudio==0.2.14",
    "pyautogui==0.9.54",
    "pygame==2.5.2",
    "simpleeval>=1.0.0",
    "pyperclip>=1.8.0",
    "numba>=0.60.0",
]

[project.scripts]
pylcss = "pylcss.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pylcss*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
